Search functionality added